#add_subdirectory(Audio)
add_subdirectory(Console)
add_subdirectory(Graphics)
add_subdirectory(GUI)
add_subdirectory(Input)
add_subdirectory(Messaging)
add_subdirectory(Physics)
add_subdirectory(Scripting)
add_subdirectory(OS)
add_subdirectory(Framework)
target_sources(AtmosphericEngine PRIVATE src/Runtime.cpp)